# nba-live

./: .cursorignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  nba_live.duckdb  pyproject.toml
.cursor/rules/: 01-motherduck_mcp.mdc  motherduck-documentation.mdc  motherduck-prompt.mdc
.github/workflows/: ci.yml
.roo/: mcp.json
.roo/rules/: 00-rules.md  01-motherduck_mcp.md
context/: INDEX.md  PLAN.md  README.md
context/docs/: INDEX.md  README.md  coverage-matrix.md  data-sources.md
context/docs/research/: INDEX.md  README.md  existing-projects.md  lessons-learned.md  schema-patterns.md
context/nba_live/: INDEX.md  README.md  TODO.md  architecture.md  prd.md
context/nba_live/journal/: INDEX.md  README.md
context/nba_live/journal/2025-01-23/: 0145-mega-research-expansion.md
context/nba_live/journal/2025-06-23/: 0000-initial-setup.md  0030-phase1-completion.md
context/workflows/: INDEX.md  README.md
database/: INDEX.md  README.md
misc/: claudeanalysis.md  motherduckprompt.txt
misc/motherduck/: motherduck-llms-full.txt  motherduck-llms.txt
monitoring/: INDEX.md  README.md
nba_live/: INDEX.md  README.md
nba_live/ai/: README.md
nba_live/db/: INDEX.md  README.md
nba_live/db/ddl/: 00_create_schema.sql  INDEX.md  README.md
nba_live/etl/: INDEX.md  README.md  etl_config.yaml
nba_live/etl/deduplication/: INDEX.md  README.md  player_matcher.py
nba_live/etl/kaggle/: INDEX.md  README.md  load_kaggle_games.py  load_kaggle_players.py  load_kaggle_team_stats.py  load_kaggle_teams.py
nba_live/tests/: INDEX.md  README.md
